# Dot_Game_Repo

./: .gitignore  README.md
Dot_Game/: Dot_Game.slnx
Dot_Game/Dot_Game/: Dot_Game.vcxproj  Dot_Game.vcxproj.filters  Renderer.h  main.cpp
Dot_Game/Dot_Game/dependencies/TGUI-1.12/: CMakeLists.txt  README.md  changelog.md  license.txt
Dot_Game/Dot_Game/dependencies/TGUI-1.12/cmake/: Dependencies.cmake  Macros.cmake  TGUIConfig.cmake.in
Dot_Game/Dot_Game/dependencies/TGUI-1.12/doc/: CMakeLists.txt  doxyfile.in  footer.html  header.html
Dot_Game/Dot_Game/dependencies/TGUI-1.12/examples/: CMakeLists.txt  main-GLFW_GLES2.cpp  main-GLFW_OPENGL3.cpp  main-RAYLIB.cpp  main-SDL_GLES2.cpp  main-SDL_GPU.cpp  main-SDL_OPENGL3.cpp  main-SDL_RENDERER.cpp  main-SDL_TTF_GLES2.cpp  main-SDL_TTF_OPENGL3.cpp  main-SFML_GRAPHICS.cpp  (+1 more)
Dot_Game/Dot_Game/dependencies/TGUI-1.12/examples/android/SDL_GPU/app/jni/: CMakeLists.txt  example.cpp
Dot_Game/Dot_Game/include/: CommandComponents.h  EntityComponents.h  GameStateManager.h  GuiManager.h  InputManager.h  RenderComponents.h  RenderSystem.h  SpawnSystem.h  TransformComponents.h  VelocityComponents.h  VelocitySystem.h  render_components.h  render_system.h  world.h
Dot_Game/Dot_Game/resources/json/: Bindings.json  BindingsMenu.json  MainMenu.json  PauseMenu.json  Spawns.json
Dot_Game/Dot_Game/src/: GameStateManager.cpp  GuiManager.cpp  InputManager.cpp  RenderSystem.cpp  Renderer.cpp  SpawnSystem.cpp  VelocitySystem.cpp  main.cpp  render_system.cpp  world.cpp
Dot_Game/Dot_Game/x64/Debug/: Dot_Game.exe.recipe  vc145.idb
(+1377 files in other folders)
